--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <html>
     <head>
         <title>
-            Hello World
+            Sightless
         </title>
     </head>
     <body>
-        <h1>Hello World</h1>
+        <h1>Sightless</h1>
+        <bold><h2>Part 1</h2></bold>
     </body>
 </html>
