--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <html>
     <head>
         <title>
-            Sightless
+            Home page
         </title>
     </head>
     <body>
-        <h1>Sightless</h1>
-        <bold><h2>Part 1</h2></bold>
+        <h1>
+        <a href="God.html"> Sightless Story (make your adventure)
+        </h1>
+        <h1>
+        <a href="form.html"> POP_DOWN (form)
+        </h1>
     </body>
 </html>
