Im working on a few things

--- a/form.html
+++ b/form.html
@@ -15,6 +15,7 @@
             <p><input required type="text"  placeholder="name"></p>
             <p><input required type="email"  placeholder="email"></p>
             <p><textarea required placeholder="comment"></textarea></p>
+            <p><input required type="yes"  placeholder="do i scare you?"></p>
             <p><input type="submit"></p>
         </form>
     </body>
