--- a/five-faves.html
+++ b/five-faves.html
@@ -3,5 +3,7 @@
     <head>
         <title>My favorite Games</title>
     </head>
-    <body></body>
+    <body>
+        <t>#1</t>
+    </body>
 </html>
