im finishing rn

--- a/form.html
+++ b/form.html
@@ -3,13 +3,15 @@
 <html>
     <head>
         <title>POP_DOWN.png</title>
+        <link rel="icon" type="image/png" href="ERROR_POP_DOWN.png"/>
     </head>
-    <body>
+    <body>     
         <style>
             *{
                 background-color: rgb(255, 0, 204);
             }
         </style>
+        <img src="ERROR_POP_DOWN.png">
         <form target="_blank" method="post" action="">
             <p>D0 Y0U L0VE ME?</p>
             <p><input required type="text"  placeholder="name"></p>
