I'll finish when i get home

--- a/five-faves.html
+++ b/five-faves.html
@@ -4,6 +4,72 @@
         <title>My favorite Games</title>
     </head>
     <body>
-        <t>#1</t>
+    <table>
+        <thead>
+            <tr>
+                <td>Rank</td>
+                <td>Title</td>
+                <td>Cover</td>
+                <td>Score</td>
+                <td>Thoughts</td>
+            </tr>
+        </thead>
+        <tbody>     
+            <tr>
+                <td>#5</td>
+                <td>Little Nightmares 1/2</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>            
+            <tr>
+                <td>#4</td>
+                <td>Pokemon: Emerald Version</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>            
+            <tr>
+                <td>#3</td>
+                <td>Mario Galaxy 2</td>
+                <td></td>
+                <td>9/10</td>
+                <td>
+                 This is some elite ball knowledge right here, i remember playing this on my wii as a kid
+                everything was on point, the music, the gameplay, it is definitely the best mario game in my 
+                opinion.
+                </td>
+            </tr>            
+            <tr>
+                <td>#2</td>
+                <td>Cuphead</td>
+                <td></td>
+                <td>9.6/10</td>
+                <td>
+                 This game is really good for what it is, for a game that is only 20 dollars i really love
+                gameplay and effort put into the game, its such a creative game that has left a mark on the world
+                this is one of the many reasons why i think 2017 was the pinicle of gaming, i love the 2d art that
+                leaves me stunned whenever i remember that this was a team of 2 brothers and 15 artists that hand drawn
+                every single animation and background, because i love indie games, especially games that have effort put
+                into them.
+                </td>
+            </tr>            
+            <tr>
+                <td>#1</td>
+                <td>Roblox:GRACE</td>
+                <td></td>
+                <td>10/10</td>
+                <td>
+                 Best game ive ever played, im a sucker for horror games, indie games, and fast paced insanity,
+                and rougelikes, and this game masterfully merges all of these themes in masterful ways that 
+                makes the game so perfect for me, theres multiple game modes for multiple people so when im bored
+                of repeating gameplay i can always play something new, unique and different, i love the vibe of 
+                this game and i love how the developers show their love for the game perfectly and its not a pay
+                to play, in fact theres no pay at all, this is free perfection that blends its horror, lore and 
+                gameplay perfectly to make one of the most fun and stressful games ive ever played.
+                </td>
+            </tr>
+        </tbody>
+    </table>
     </body>
 </html>
