Im sorry sir :(

--- a/five-faves.html
+++ b/five-faves.html
@@ -19,15 +19,25 @@
                 <td>#5</td>
                 <td>Little Nightmares 1/2</td>
                 <td></td>
-                <td></td>
-                <td></td>
+                <td>8.8/10</td>
+                <td>
+                 A well known thing about me is im a sucker for horror, i also love indie games
+                so this game was really good for me, i love the story, gameplay and intesity, and
+                im super exited for the third game to release on october.
+                </td>
             </tr>            
             <tr>
                 <td>#4</td>
                 <td>Pokemon: Emerald Version</td>
                 <td></td>
-                <td></td>
-                <td></td>
+                <td>8.6/10</td>
+                <td>
+                 Definitely and easily the best pokemon game, its sad that its so underrated
+                as a pokemon game, it probably has the best designs as well in my opinion, the 
+                only reason why i hate it is because its so outdated, if they put newer pokemon
+                in the 2d style in this game i would definitely like it alot more, this was already
+                one of my favorite games growing up, i just hate how forgotten its become.
+                </td>
             </tr>            
             <tr>
                 <td>#3</td>
@@ -37,7 +47,7 @@
                 <td>
                  This is some elite ball knowledge right here, i remember playing this on my wii as a kid
                 everything was on point, the music, the gameplay, it is definitely the best mario game in my 
-                opinion.
+                opinion, and i cant wait for the movie to release.
                 </td>
             </tr>            
             <tr>
