--- a/five-faves.html
+++ b/five-faves.html
@@ -67,7 +67,7 @@
             <tr>
                 <td>#1</td>
                 <td>Roblox:GRACE</td>
-                <td></td>
+                <td><img src="GRACE.png"></td>
                 <td>10/10</td>
                 <td>
                  Best game ive ever played, im a sucker for horror games, indie games, and fast paced insanity,
