--- a/five-faves.html
+++ b/five-faves.html
@@ -53,7 +53,7 @@
             <tr>
                 <td>#2</td>
                 <td>Cuphead</td>
-                <td></td>
+                <td><img src="Cuphead.png"></td>
                 <td>9.6/10</td>
                 <td>
                  This game is really good for what it is, for a game that is only 20 dollars i really love
