--- a/five-faves.html
+++ b/five-faves.html
@@ -18,7 +18,7 @@
             <tr>
                 <td>#5</td>
                 <td>Little Nightmares 1/2</td>
-                <td></td>
+                <td><img src="little nightmares 1.avif" width="100"></td>
                 <td>8.8/10</td>
                 <td>
                  A well known thing about me is im a sucker for horror, i also love indie games
@@ -29,7 +29,7 @@
             <tr>
                 <td>#4</td>
                 <td>Pokemon: Emerald Version</td>
-                <td></td>
+                <td><img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f7/PokemonEmeraldBox.jpg/250px-PokemonEmeraldBox.jpg" width="100"></td>
                 <td>8.6/10</td>
                 <td>
                  Definitely and easily the best pokemon game, its sad that its so underrated
@@ -42,7 +42,7 @@
             <tr>
                 <td>#3</td>
                 <td>Mario Galaxy 2</td>
-                <td></td>
+                <td><img src="Galaxy2.png" width="100"></td>
                 <td>9/10</td>
                 <td>
                  This is some elite ball knowledge right here, i remember playing this on my wii as a kid
@@ -53,7 +53,7 @@
             <tr>
                 <td>#2</td>
                 <td>Cuphead</td>
-                <td><img src="Cuphead.png"></td>
+                <td><img src="Cuphead.png" width="100"></td>
                 <td>9.6/10</td>
                 <td>
                  This game is really good for what it is, for a game that is only 20 dollars i really love
@@ -67,7 +67,7 @@
             <tr>
                 <td>#1</td>
                 <td>Roblox:GRACE</td>
-                <td><img src="GRACE.png"></td>
+                <td><img src="GRACE.png" width="100"></td>
                 <td>10/10</td>
                 <td>
                  Best game ive ever played, im a sucker for horror games, indie games, and fast paced insanity,
