--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
         <h1>
         <a href="form.html"> POP_DOWN (form)
         </h1>
+        <h1>
+        <a href="five-faves.html"> Rankings
+        </h1>
     </body>
 </html>
