--- a/css-example.html
+++ b/css-example.html
@@ -6,6 +6,6 @@
         </title>
     </head>
     <body>
-        <iframe src="https://kbhgames.com/game/pokemon-emerald" width="1800" height="1000"></iframe>
+        <iframe src="https://freebie.games/games/pokemon-emerald-version/play/" width="1800" height="920"></iframe>
     </body>
 </html>
