--- a/media.html
+++ b/media.html
@@ -7,5 +7,12 @@
     </head>
     <body>
         <h1>Welcome to the chilling room</h1>
+        <div class="link">
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+        </div>
     </body>
 </html>
