--- a/media.html
+++ b/media.html
@@ -6,10 +6,16 @@
         </title>
     </head>
     <body>
+        <style>
+            *{
+                background-color: rgb(0, 0, 0);
+                color: white;
+            }
+        </style>
         <h1>Welcome to the chilling room</h1>
-        <div class="link">
-            <a href=""></a>
-            <a href=""></a>
+        <div>
+            <audio src="Phill C. - Ultrasonic Faith.mp3" controls></audio>
+            <a href="God.html"></a>
             <a href=""></a>
             <a href=""></a>
             <a href=""></a>
